update desain berita

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                                 </span>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="pages/UI/general.html"><i class="fa fa-circle-o"></i> History Grabbing Berita</a></li>
+                                <li><a href="pages/historyberita.html"><i class="fa fa-circle-o"></i> History Grabbing Berita</a></li>
                                 <li><a href="pages/beritamasuk.html"><i class="fa fa-circle-o"></i> Berita Masuk</a></li>
-                                <li><a href="pages/UI/buttons.html"><i class="fa fa-circle-o"></i> Berita Terfilter</a></li>
+                                <li><a href="pages/beritaterfilter.html"><i class="fa fa-circle-o"></i> Berita Terfilter</a></li>
                             </ul>
                         </li>
                         
