--- a/pages/historytweet.html
+++ b/pages/historytweet.html
@@ -83,8 +83,8 @@
                                 </span>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="historyberita.html"><i class="fa fa-circle-o"></i> History Grabbing Berita</a></li>
-                                <li class="active"><a href="beritamasuk.html"><i class="fa fa-circle-o"></i> Berita Masuk</a></li>
+                                <li class="active"><a href="historyberita.html"><i class="fa fa-circle-o"></i> History Grabbing Berita</a></li>
+                                <li><a href="beritamasuk.html"><i class="fa fa-circle-o"></i> Berita Masuk</a></li>
                                 <li><a href="beritaterfilter.html"><i class="fa fa-circle-o"></i> Berita Terfilter</a></li>
                             </ul>
                         </li>
@@ -246,7 +246,7 @@
                 <!-- Content Header (Page header) -->
                 <section class="content-header">
                     <h1>
-                        Berita Masuk
+                        History Grabbing Berita
                     </h1>
                     <ol class="breadcrumb">
                         <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
@@ -267,21 +267,19 @@
                                     <script type="text/javascript">
                                         var a = 10;
                                         document.write("<table id='example1' class='table table-bordered table-striped'>");
-                                        document.write("<thead><tr><th>Tanggal</th><th>Judul</th><th>Sumber</th><th>Lihat</th><th>Komentar</th><th>Like</th><th>Dislike</th><th>Edit</th><th>Delete</th></tr></thead><tbody>");
-                                        for (i = 0; i < 100; i++) {
+                                        document.write("<thead><tr><th>Tanggal</th><th>Jumlah Target Situs</th><th>Berita Masuk</th><th>Berita Terfilter</th><th>Persentase</th><th>Status</th><th>Log</th></tr></thead><tbody>");
+                                        for (i = 0; i < 5; i++) {
                                             document.write("<tr>");
                                             document.write("<td>21/10/2016 6:45</td>");
-                                            document.write("<td>Ini Hasil Uji Forensik Mabes Polri Soal Video Al Maidah 51</td>");
-                                            document.write("<td>Islampos</td>");
-                                            document.write("<td>"+Math.floor((Math.random() * 100) + 1)+"</td>");
-                                            document.write("<td>5</td>");
-                                            document.write("<td>28</td>");
-                                            document.write("<td>3</td>");
-                                            document.write("<td><button type='button' class='btn btn-block btn-warning btn-xs'>Edit</button></td>");
-                                            document.write("<td><button type='button' class='btn btn-block btn-danger btn-xs'>Delete</button></td>");
+                                            document.write("<td>100</td>");
+                                            document.write("<td>"+Math.floor((Math.random() * 50) + 0)+"</td>");
+                                            document.write("<td>"+Math.floor((Math.random() * 10) + 0)+"</td>");
+                                            document.write("<td><span class='badge bg-light-blue'>"+Math.floor((Math.random() * 50) + 50)+"%</span></td>");
+                                            document.write("<td><span class='label label-success'>Sukses</span></td>");
+                                            document.write("<td>Cron Jobs berhasil dijalankan dengan baik</td>");
                                             document.write("</tr>");
                                         }
-                                        document.write("</tbody><tfoot><tr><th>Tanggal</th><th>Judul</th><th>Sumber</th><th>Lihat</th><th>Komentar</th><th>Dislike</th></tr></tfoot><tbody></table>");
+                                        document.write("</tbody><tfoot><tr><th>Tanggal</th><th>Jumlah Target Situs</th><th>Berita Masuk</th><th>Berita Terfilter</th><th>Persentase</th><th>Status</th><th>Log</th></tr></tfoot><tbody></table>");
                                     </script>
                                 </div>
                                 <!-- /.box-body -->
