--- a/pages/historyberita.html
+++ b/pages/historyberita.html
@@ -98,9 +98,9 @@
                                 </span>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="pages/UI/general.html"><i class="fa fa-circle-o"></i> History Grabbing Tweet</a></li>
-                                <li><a href="pages/UI/icons.html"><i class="fa fa-circle-o"></i> Tweet Masuk</a></li>
-                                <li><a href="pages/UI/buttons.html"><i class="fa fa-circle-o"></i> Tweet Terfilter</a></li>
+                                <li><a href="historytweet.html"><i class="fa fa-circle-o"></i> History Grabbing Tweet</a></li>
+                                <li><a href="tweetmasuk.html"><i class="fa fa-circle-o"></i> Tweet Masuk</a></li>
+                                <li><a href="tweetterfilter.html"><i class="fa fa-circle-o"></i> Tweet Terfilter</a></li>
                             </ul>
                         </li>
 
