--- a/pages/tweetmasuk.html
+++ b/pages/tweetmasuk.html
@@ -74,7 +74,7 @@
                             </a>
                         </li>
 
-                        <li class="active treeview">
+                        <li class="treeview">
                             <a href="#">
                                 <i class="fa fa-laptop"></i>
                                 <span>Berita</span>
@@ -84,12 +84,12 @@
                             </a>
                             <ul class="treeview-menu">
                                 <li><a href="historyberita.html"><i class="fa fa-circle-o"></i> History Grabbing Berita</a></li>
-                                <li class="active"><a href="beritamasuk.html"><i class="fa fa-circle-o"></i> Berita Masuk</a></li>
+                                <li><a href="beritamasuk.html"><i class="fa fa-circle-o"></i> Berita Masuk</a></li>
                                 <li><a href="beritaterfilter.html"><i class="fa fa-circle-o"></i> Berita Terfilter</a></li>
                             </ul>
                         </li>
 
-                        <li class="treeview">
+                        <li class="active treeview">
                             <a href="#">
                                 <i class="fa fa-laptop"></i>
                                 <span>Tweet</span>
@@ -98,9 +98,9 @@
                                 </span>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="pages/UI/general.html"><i class="fa fa-circle-o"></i> History Grabbing Tweet</a></li>
-                                <li><a href="pages/UI/icons.html"><i class="fa fa-circle-o"></i> Tweet Masuk</a></li>
-                                <li><a href="pages/UI/buttons.html"><i class="fa fa-circle-o"></i> Tweet Terfilter</a></li>
+                                <li><a href="historytweet.html"><i class="fa fa-circle-o"></i> History Grabbing Tweet</a></li>
+                                <li class="active"><a href="tweetmasuk.html"><i class="fa fa-circle-o"></i> Tweet Masuk</a></li>
+                                <li><a href="tweetterfilter.html"><i class="fa fa-circle-o"></i> Tweet Terfilter</a></li>
                             </ul>
                         </li>
 
@@ -246,13 +246,8 @@
                 <!-- Content Header (Page header) -->
                 <section class="content-header">
                     <h1>
-                        Berita Masuk
+                        Tweet Masuk
                     </h1>
-                    <ol class="breadcrumb">
-                        <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                        <li><a href="#">Tables</a></li>
-                        <li class="active">Data tables</li>
-                    </ol>
                 </section>
 
                 <!-- Main content -->
@@ -267,21 +262,16 @@
                                     <script type="text/javascript">
                                         var a = 10;
                                         document.write("<table id='example1' class='table table-bordered table-striped'>");
-                                        document.write("<thead><tr><th>Tanggal</th><th>Judul</th><th>Sumber</th><th>Lihat</th><th>Komentar</th><th>Like</th><th>Dislike</th><th>Edit</th><th>Delete</th></tr></thead><tbody>");
+                                        document.write("<thead><tr><th>Tanggal</th><th>Tweet</th><th>Sumber</th><th>Delete</th></tr></thead><tbody>");
                                         for (i = 0; i < 100; i++) {
                                             document.write("<tr>");
                                             document.write("<td>21/10/2016 6:45</td>");
                                             document.write("<td>Ini Hasil Uji Forensik Mabes Polri Soal Video Al Maidah 51</td>");
                                             document.write("<td>Islampos</td>");
-                                            document.write("<td>"+Math.floor((Math.random() * 100) + 1)+"</td>");
-                                            document.write("<td>5</td>");
-                                            document.write("<td>28</td>");
-                                            document.write("<td>3</td>");
-                                            document.write("<td><button type='button' class='btn btn-block btn-warning btn-xs'>Edit</button></td>");
                                             document.write("<td><button type='button' class='btn btn-block btn-danger btn-xs'>Delete</button></td>");
                                             document.write("</tr>");
                                         }
-                                        document.write("</tbody><tfoot><tr><th>Tanggal</th><th>Judul</th><th>Sumber</th><th>Lihat</th><th>Komentar</th><th>Dislike</th></tr></tfoot><tbody></table>");
+                                        document.write("</tbody><tfoot><tr><th>Tanggal</th><th>Judul</th><th>Sumber</th><th>Delete</th></tr></tfoot><tbody></table>");
                                     </script>
                                 </div>
                                 <!-- /.box-body -->
